<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_features"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_loop"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="484dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_loop"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Loop" />

        <RadioButton
            android:id="@+id/radioButton_out_n_back"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Out-and-back" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_flatHilly"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="257dp"
        android:layout_marginBottom="409dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_flat"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Flat" />

        <RadioButton
            android:id="@+id/radioButton_hilly"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Hilly" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_streetTrail"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="336dp"
        android:layout_marginBottom="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_streets"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Streets" />

        <RadioButton
            android:id="@+id/radioButton_trail"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Trail" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_even"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="413dp"
        android:layout_marginBottom="253dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_even"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Even" />

        <RadioButton
            android:id="@+id/radioButton_uneven"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Uneven" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_marginTop="486dp"
        android:layout_marginBottom="153dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_easy"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Easy" />

        <RadioButton
            android:id="@+id/radioButton_medium"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Medium" />

        <RadioButton
            android:id="@+id/radioButton_hard"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="Hard" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView_features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="574dp"
        android:text="Features"
        android:textSize="32dp"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rg_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rg_difficulty"
        app:layout_constraintTop_toTopOf="@+id/rg_difficulty"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@android:drawable/presence_online" />

    <ImageView
        android:id="@+id/imageView_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rg_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rg_difficulty"
        app:layout_constraintTop_toTopOf="@+id/rg_difficulty"
        app:srcCompat="@android:drawable/presence_away" />

    <ImageView
        android:id="@+id/imageView_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rg_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rg_difficulty"
        app:layout_constraintTop_toTopOf="@+id/rg_difficulty"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@android:drawable/presence_busy" />

    <ImageView
        android:id="@+id/imageView_loop"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rg_loop"
        app:layout_constraintTop_toTopOf="@+id/rg_loop"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

    <ImageView
        android:id="@+id/imageView_out_and_back"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/rg_loop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rg_loop"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageView
        android:id="@+id/imageView_road"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rg_streetTrail"
        app:layout_constraintTop_toTopOf="@+id/rg_streetTrail"
        app:srcCompat="@drawable/ic_road" />

    <ImageView
        android:id="@+id/imageView_trail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/rg_streetTrail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rg_streetTrail"
        app:srcCompat="@drawable/ic_route" />

    <ImageView
        android:id="@+id/imageView_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="554dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_circle_right" />


</androidx.constraintlayout.widget.ConstraintLayout>