<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/walk_screen_container"
    tools:context=".WalkInProgress">

    <TextView
        android:id="@+id/textView_routeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:gravity="center"
        android:text="" />

    <TextView
        android:id="@+id/tv_WalkScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Walk Screen TODO"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/tv_Miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="30dp"/>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_STOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="STOP" />

    <EditText
        android:id="@+id/mock_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Time" />

    <Button
        android:id="@+id/mock_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SUBMIT" />


</LinearLayout>