...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_star_filled"
        android:layout_width="126dp"
        android:layout_height="113dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="365dp"
...
